[package]
name = "vnc-rs"
version = "0.5.2"
edition = "2021"
authors  = ["Jovi Hsu <jv.hsu@outlook.com>", "Petr Beneš <petr.benes@gendigital.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/HsuJv/vnc-rs"
homepage = "https://github.com/HsuJv/vnc-rs"
documentation = "https://docs.rs/vnc-rs"
description = "An async implementation of VNC client side protocol"
keywords = ["vnc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vnc"
path = "src/lib.rs"

[dependencies]
#error
thiserror = "^1"
flate2 = "^1"

#log
tracing = { version = "^0.1", features = ["log"] }

# async
async_io_stream = "0.3"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "^1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
tokio = { version = "^1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time"
    ]}

[dev-dependencies]
anyhow = "^1"
tracing-subscriber = { version = "^0.3" }
minifb = "0.25.0"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
